<resources>
    <string name="app_name">Rock Paper Scissors</string>
    <string name="welcome">Welcome</string>
    <string name="instructions">Instructions: select rock, paper or scissor to play.</string>
    <string name="statistics">Your all time statistics\nWin: %1$d Draw: %2$d Lose: %3$d</string>
    <string name="rock">Rock</string>
    <string name="paper">Paper</string>
    <string name="scissors">Scissors</string>
    <string name="vs">V.S.</string>
    <string name="you">You</string>
    <string name="computer">Computer</string>
    <string name="win_text">You win!</string>
    <string name="lose_text">Computer wins!</string>
    <string name="draw_text">Draw</string>
    <string name="check_history">Check game history</string>
    <string name="delete_history">Delete game history</string>
    <string name="title_history">Your Game History</string>
</resources>
